[project]
name = "libzapi"
version = "0.1.0"
description = "Python client for the Zendesk API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cattrs>=25.3.0",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
    "hypothesis>=6.147.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.3",
    "sphinx",
    "myst-parser",
    "furo",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-mermaid",
    "sphinx-copybutton",
    "sphinx_design",
    "tox>=4.32.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
